--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,10 +71,54 @@
   .container{
     border: 1px solid white;
     border-radius: 10px;
-    width: 65%;
+    width: 100%;
     height: 80%;
-    
+    display: flex;
+    overflow: hidden;
+
+    .sidebar{
+      width:50%;
+      height: 100%;
+      border-right: 1px solid #3e3c61;
+      background-color: #3e3c61;
+
+      .navbar{
+        display:flex;
+        align-items: center;
+        background-color: #2f2d52;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        color: #ddddf7;
+
+        .logo{
+          font-weight: bold;
+        }
+        .user{
+          display: flex;
+          gap: 10px;
+
+          img{
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+          
+          button{
+            background-color: #5d5b8d;
+            color: #ddddf7;
+            font-size: 10px;
+            border: none;
+            cursor: pointer;
+          }
+        }
+      }
+
+    }
+    .chat{
+      flex:2;
+    }
   }
-    .sidebar{flex: 1;}
-    .chat{flex:2;}
 }
